--- a/.github/workflows/notify-discord.yml
+++ b/.github/workflows/notify-discord.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Send Discord Notification
         uses: appleboy/discord-action@master
         with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          webhook_url: ${{ secrets.DISCORD_WEBHOOK_URL }}
           message: |
             Nouveau commit sur **${{ github.repository }}** par **${{ github.actor }}** :
             - **Message** : ${{ github.event.head_commit.message }}
